--- a/ch05/k8s/intro/deployment.yaml
+++ b/ch05/k8s/intro/deployment.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
   name: echo
   labels:
     app: echo
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
       app: echo
@@ -31,6 +31,6 @@ spec:
         ports:
         - containerPort: 80
       - name: echo
-        image: ghcr.io/gihyodocker/echo:v0.1.0
+        image: ghcr.io/gihyodocker/echo:v0.1.0-patch
         ports:
         - containerPort: 8080
